Add plots for Chapter 41, 42

--- a/tex/report.tex
+++ b/tex/report.tex
@@ -201,11 +201,11 @@
 \input{sections/3-estimation}
 
 \newpage
-\chapter{Empirical Applications}
+\chapter{Application to Simulated and Empirical Datasets}
 \input{sections/4-application}
 
 \newpage
-\chapter{Summary}
+\chapter{Summary and Outlook}
 \input{sections/5-summary}
 
 
@@ -229,9 +229,9 @@
 \chapter{Supplementary Materials}
 \input{sections/b-supplements}
 
-\newpage
-\chapter*{---Discarded---}
-\input{sections/c-discards}
+%\newpage
+%\chapter*{---Discarded---}
+%\input{sections/c-discards}
 
 \addtocontents{toc}{\protect\setcounter{tocdepth}{1}}  % Don't show appendix sections in TOC
 
