--- a/notebooks/Besprechung_2021-06-03.ipynb
+++ b/notebooks/Besprechung_2021-06-03.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "Besprechung\n",
     "===========\n",
