--- a/tex/sections/2-theory.tex
+++ b/tex/sections/2-theory.tex
@@ -206,7 +206,6 @@ When the original curves $\beta$ are absolutely continuous, the SRV curves are a
 As a consequence, we can re-construct the original curve $\beta$ up to translation from its respective SRV curve $q$ by integration $\beta(t) = \beta(0) + \int_0^t q(s) \norm{q(s)} ds$.
 Because the translation of the original curve is usually not of interest from the point of shape analysis, the SRV curve holds all relevant information about the shape of $\beta$.
 This means, in particular, that instead of analysing the shape of $\beta$, we can equivalently analyse the shape of $q$.
-\todo{Write abit more. Citations!}
 The shape preserving transformations on original curve level translate to SRV curve level by actions laid out in \cref{lem:2-transf}.
 
 \begin{lemma}
@@ -295,7 +294,7 @@ In this thesis we will use the methods laid out in \cite{Steyer2021} and impleme
   The elastic full Procrustes distance is given as $d([\beta_1],[\beta_2]) = \norm{\widetilde q_1 - \omega^{(k)} ( \widetilde q_2 \circ \gamma^{(k)} ) \sqrt{\dot{\gamma}^{(k)}}}_{\mathbb{L}^2}$.
 \end{algorithm}
 
-\todo[inline]{Implement \texttt{R} function for discrete elastic full proc2d alignment.}
+%\todo[inline]{Implement \texttt{R} function for discrete elastic full proc2d alignment.}
 %\noindent See \cref{fig:2-elastic-pfit} for an example of two curves that have been aligned by minimizing their elastic full Procrustes distance.
 %
 %\begin{figure}
@@ -364,7 +363,7 @@ Turning back to the calculation of $\hat\mu_1$, we can simplify \cref{eq:2-mean-
 \end{align}
 and we end up with a two step optimization problem consisting of an outer optimization over $\mu_q$ and an inner optimization over the set $\left\{\gamma_i\right\}_{i=1,\dots,N}$.
 Similarly to the approaches discussed in \cite{SrivastavaKlassen2016} and to \cite{Steyer2021}, we solve this iteratively by iterative \emph{template based alignment} \parencite[see e.g.][271]{SrivastavaKlassen2016}:
-In each step, the mean $\hat\mu_q$ is estimated while keeping the parametrizations $\gamma_i$ fixed, after which the $\gamma_i$ are updated by calculating the warping alignment of the full Procrustes fit of each $\widetilde q_i$ onto $\hat\mu_q$.\footnote{Note that this is \emph{not} the same as performing an elastic full Procrustes fit of $\widetilde q_i$ onto $\hat \mu_q$, because the warping and Procrustes alignments are themselves not iterated over. In not doing this, the thesis follows the approach by \citeauthor{SrivastavaEtAl2011}.}
+In each step, the mean $\hat\mu_q$ is estimated while keeping the parametrizations $\gamma_i$ fixed, after which the $\gamma_i$ are updated by calculating the warping alignment of the full Procrustes fit of each $\widetilde q_i$ onto $\hat\mu_q$.\footnote{Note that this is \emph{not} the same as performing an elastic full Procrustes fit of $\widetilde q_i$ onto $\hat \mu_q$, because the warping and Procrustes alignments are themselves not iterated over.}
 Mean estimation and warping alignment are iterated until the mean shape has converged.
 
 Let us consider the outer optimization problem in step $k$ for a fixed set of warping functions $\{\gamma_i^{(k)}\}_{i=1,\dots,N}$ with corresponding warping aligned normalized SRV curves $\widetilde q_i^{(k)} = ( \widetilde q_i \circ \gamma_i^{(k)}) \sqrt{\dot\gamma_i^{(k)}}$.
