--- a/tex/graphics/41-spiral-means-rot.tex
+++ b/tex/graphics/41-spiral-means-rot.tex
@@ -1,4 +1,4 @@
-% Created by tikzDevice version 0.12.3.1 on 2021-12-06 11:34:02
+% Created by tikzDevice version 0.12.3.1 on 2021-12-06 19:10:38
 % !TEX encoding = UTF-8 Unicode
 \begin{tikzpicture}[x=1pt,y=1pt]
 \definecolor{fillColor}{RGB}{255,255,255}
@@ -741,12 +741,12 @@
 \begin{scope}
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (174.98, 13.20) {$\Re(\beta)$};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (174.98, 13.20) {$\Re(\beta-\overline\beta)$};
 \end{scope}
 \begin{scope}
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,rotate= 90.00,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (121.48, 72.58) {$\Im(\beta)$};
+\node[text=drawColor,rotate= 90.00,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (121.48, 72.58) {$\Im(\beta-\overline\beta)$};
 \end{scope}
 \begin{scope}
 \definecolor{drawColor}{RGB}{255,255,255}
