--- a/tex/report.tex
+++ b/tex/report.tex
@@ -226,7 +226,7 @@
 \input{sections/a-appendix}
 
 \newpage
-\chapter{Supplementary Materials}
+\chapter{Implementation Notes}
 \input{sections/b-supplements}
 
 %\newpage
