--- a/tex/sections/a-appendix.tex
+++ b/tex/sections/a-appendix.tex
@@ -7,17 +7,17 @@
 \label{app:a-deriv-fpdist}
 \begin{align*}
   d_{FP}([\beta_1]_\Eucl,[\beta_2]_\Eucl)^2 
-    = & \min_{\omega \in \mathbb{C}} \norm{\widetilde \beta_1 - \lambda e^{i\theta} \widetilde \beta_2}^2 \\
-    = & \min_{\lambda \in \mathbb{R}^+,\, \theta \in [0,2\pi]} \norm{\widetilde \beta_1 - \lambda e^{\iu\theta} \widetilde \beta_2}^2 \\
-    = & \min_{\lambda \in \mathbb{R}^+,\, \theta \in [0,2\pi]} \langle \widetilde \beta_1 - \lambda e^{\iu\theta} \widetilde \beta_2, \widetilde \beta_1 - \lambda e^{\iu\theta} \widetilde \beta_2 \rangle \\
-    = & \min_{\lambda \in \mathbb{R}^+,\, \theta \in [0,2\pi]} \norm{\widetilde \beta_1}^2 + \lambda^2 \norm{\widetilde \beta_2}^2 - \lambda ( e^{\iu\theta} \langle \widetilde \beta_1, \widetilde \beta_2 \rangle + e^{-\iu\theta} \langle \widetilde \beta_2, \widetilde \beta_1 \rangle 
+    = & \min_{\omega \in \mathbb{C}} \,\, \norm{\widetilde \beta_1 - \omega \widetilde \beta_2}^2 \\
+    = & \min_{\lambda \in \mathbb{R}^+,\, \theta \in [0,2\pi)} \norm{\widetilde \beta_1 - \lambda e^{\iu\theta} \widetilde \beta_2}^2 \\
+    = & \min_{\lambda \in \mathbb{R}^+,\, \theta \in [0,2\pi)} \langle \widetilde \beta_1 - \lambda e^{\iu\theta} \widetilde \beta_2, \widetilde \beta_1 - \lambda e^{\iu\theta} \widetilde \beta_2 \rangle \\
+    = & \min_{\lambda \in \mathbb{R}^+,\, \theta \in [0,2\pi)} \norm{\widetilde \beta_1}^2 + \lambda^2 \norm{\widetilde \beta_2}^2 - \lambda ( e^{\iu\theta} \langle \widetilde \beta_1, \widetilde \beta_2 \rangle + e^{-\iu\theta} \langle \widetilde \beta_2, \widetilde \beta_1 \rangle 
 \end{align*}
-Define $\langle \widetilde \beta_1, \widetilde \beta_2 \rangle = \kappa e^{\iu\phi} \in \mathbb{C}$ and use $\norm{\widetilde \beta_1} = \norm{\widetilde \beta_2} = 1$.
+Define $\langle \widetilde \beta_1, \widetilde \beta_2 \rangle = \kappa e^{\iu\phi} \in \mathbb{C}$ with $\kappa \in \mathbb{R}^+$, $\phi \in [0,2\pi)$ and use $\norm{\widetilde \beta_1} = \norm{\widetilde \beta_2} = 1$.
 \begin{align*}
   d_{FP}([\beta_1]_\Eucl,[\beta_2]_\Eucl)^2 
-   = &  \min_{\lambda \in \mathbb{R}^+,\, \theta \in [0,2\pi]} 1 + \lambda^2  - \lambda ( e^{\iu\theta} \kappa e^{\iu\phi} + e^{-\iu\theta} \kappa e^{-\iu\phi} ) \\
-   = &  \min_{\lambda \in \mathbb{R}^+,\, \theta \in [0,2\pi]} 1 + \lambda^2  - \lambda \kappa \left( e^{\iu(\theta + \phi)} + e^{-\iu (\theta + \phi)} \right) \\
-   = &  \min_{\lambda \in \mathbb{R}^+} 1 + \lambda^2  - \max_{\theta \in [0,2\pi]} 2 \lambda \kappa \cos{(\theta + \phi)} \\
+   = &  \min_{\lambda \in \mathbb{R}^+,\, \theta \in [0,2\pi)} 1 + \lambda^2  - \lambda ( e^{\iu\theta} \kappa e^{\iu\phi} + e^{-\iu\theta} \kappa e^{-\iu\phi} ) \\
+   = &  \min_{\lambda \in \mathbb{R}^+,\, \theta \in [0,2\pi)} 1 + \lambda^2  - \lambda \kappa \left( e^{\iu(\theta + \phi)} + e^{-\iu (\theta + \phi)} \right) \\
+   = &  \min_{\lambda \in \mathbb{R}^+} 1 + \lambda^2  - \max_{\theta \in [0,2\pi)} 2 \lambda \kappa \cos{(\theta + \phi)} \\
    \overset{\theta^\mathrm{opt} = -\phi}{=} & \min_{\lambda \in \mathbb{R}^+} 1 + \lambda^2  - 2 \lambda \kappa
 \end{align*}
 From $\frac{\partial}{\partial\lambda}\left( 1 + \lambda^2 - 2\lambda\kappa \right) = 2\lambda - 2\kappa \overset{!}{=} 0$ it follows that $\lambda^\mathrm{opt} = \kappa$.
